--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
  body{
-    color: blue;
+    color: #1e1f24;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -15,6 +15,10 @@
     padding: 0.5em;
 }
 
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -31,4 +35,9 @@
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
