--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,15 @@
  body{
-    color: #1e1f24;
+     background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
+    padding: 0;
 } 
 
 #cabecera{
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
@@ -38,6 +40,7 @@
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
 
